# automation-and-rpa

./: FileLogExporter.cpp  FileLogExporter.h  FixedWindowRollingPolicy.cpp  FixedWindowRollingPolicy.h  Log4Data.cpp  Log4Data.h  LogHelper.cpp  LogHelper.h  LogHelper.txt  NewCoreLog.cpp  NewCoreLog.h  NewLog4Data.cpp  NewLog4Data.h  NewLogHelper.cpp  NewLogHelper.h  NewNewLog4Data.cpp  README.md  adaptacao.cpp  all_year.py  all_year_random.py  buga.py  collector.h  data.txt  dynatrace-dql.txt  filelogexporter.txt  fixedwindowrollingpolicy.txt  green_history.py  master_green.py  metricassync.txt  otelmetermain.cpp  otelmetermaincmakelists.txt  otelmetertest.py  usageexamplecorelog.cpp  word_cloud.py
.ccls-cache/@home@l3xtech@repos@public_repos@automation-and-rpa/: otelmetermain.cpp.blob
collectorTest/: CMakeCache.txt  CMakeLists.txt  collectorTestGrpc.cpp  collectorTestHttp.cpp
